#3233 - Alignment fix for help text, when chat is enabled

--- a/public/src/app/app-common.scss
+++ b/public/src/app/app-common.scss
@@ -3633,6 +3633,7 @@ $adm-bdr:#F0F0F0;
 	.msg{
 		float: inherit;
 		margin-top: 5px;
+		margin-left: 0;
 		font-size: 12px;
 	}
 	.rules-wrapper{
